Resolves alignment issues and simplifies markup

--- a/source/css/main.css.scss
+++ b/source/css/main.css.scss
@@ -25,3 +25,9 @@ section {
 body {
   padding-bottom: 50px;
 }
+
+@media (min-width: 1200px) {
+ .container {
+    width: 970px
+  }
+}
